# respot

./: .gitignore  Cargo.toml  README.md
doc/: developers.md  package_maintainers.md  resource_footprint.md  users.md
src/: application.rs  authentication.rs  ipc.rs  lib.rs  lyrics.rs  main.rs  mpris.rs  notification.rs  queue.rs  traits.rs  utils.rs
src/command/: manager.rs  mod.rs  parse.rs  types.rs
src/config/: mod.rs  paths.rs  types.rs
src/model/: playable.rs  track.rs
src/spotify/: api.rs  mod.rs  url.rs  worker.rs
src/ui/: album.rs  artist.rs  browse.rs  contextmenu.rs  cover.rs  help.rs  layout.rs  library.rs  listview.rs  lyrics.rs  mod.rs  playlist.rs  playlists.rs  queue.rs  search.rs  search_results.rs  show.rs  tabbedview.rs
