[package]
name = "respot"
readme = "README.md"
version = "1.3.3"
description = "ncurses Spotify client written in Rust using librespot, inspired by ncmpc and the likes."
exclude = ["doc/images/**"]
keywords = ["spotify", "ncurses", "librespot", "terminal"]
authors = ["fantaize <hello@fantaize.net>"]
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/fantaize/respot"

[badges]
maintenance = {status = "actively-developed"}

[lints.clippy]
enum_glob_use = "warn"
use_self = "deny"
multiple_inherent_impl = "deny"

[profile.release]
lto = true
codegen-units = 1

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
chrono = "0.4"
clap = "4.6.0"
arboard = {version = "3.6", optional = true}
crossbeam-channel = "0.5"
zbus = {version = "5.14.0", default-features = false, features = ["tokio"], optional = true}
fern = "0.7"
futures = "0.3"
ioctl-rs = {version = "0.2", optional = true}
libc = "0.2.183"
librespot-core = "0.8.0"
librespot-oauth = "0.8.0"
librespot-playback = {version = "0.8.0", default-features = false, features = ["native-tls"]}
log = "0.4.29"
pancurses = {version = "0.17.0", optional = true}
parse_duration = "2.1.1"
platform-dirs = "0.3.0"
rand = "0.10"
regex = "1"
reqwest = {version = "0.13", features = ["blocking", "json"]}
serde = "1.0"
serde_cbor = "0.11.2"
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
tokio = {version = "1", features = ["rt-multi-thread", "sync", "time", "net"]}
tokio-util = {version = "0.7.18", features = ["codec"]}
tokio-stream = {version = "0.1.18", features = ["sync"]}
toml = "1.0"
unicode-width = "0.2.2"
url = "2.5"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.3"

[dependencies.rspotify]
default-features = false
features = ["client-ureq", "ureq-native-tls"]
version = "0.15.0"

[dependencies.cursive]
default-features = false
version = "0.21.1"

[dependencies.notify-rust]
default-features = false
version = "4"
# Use zbus, which we already depend on, instead of dbus.
features = ["z"]
optional = true

[features]
default = ["rodio_backend", "crossterm_backend", "share_clipboard", "mpris", "notify"]

# Audio backends
rodio_backend = ["librespot-playback/rodio-backend"]           # Cross-platform (CoreAudio, ALSA, WASAPI)
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"] # Linux only
alsa_backend = ["librespot-playback/alsa-backend"]             # Linux only
portaudio_backend = ["librespot-playback/portaudio-backend"]

# Terminal backends
crossterm_backend = ["cursive/crossterm-backend"]                       # Cross-platform (recommended)
ncurses_backend = ["cursive/ncurses-backend"]                           # Unix only
termion_backend = ["cursive/termion-backend"]                           # Unix only
pancurses_backend = ["cursive/pancurses-backend", "pancurses/win32"]    # Windows

# Features
share_clipboard = ["arboard", "arboard/wayland-data-control"]
share_selection = ["arboard", "arboard/wayland-data-control"] # Primary selection (Linux/BSD only)
mpris = ["zbus"]        # D-Bus media player control
notify = ["notify-rust"] # Desktop notifications
cover = ["ioctl-rs"]     # Album cover display in terminal
